// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button  1`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 2px;
  box-sizing: border-box;
  color: #f5f5f5;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #f5f5f5;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span
    className=""
  >
    Settings
  </span>
</button>
`;

exports[`Button  2`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 2px;
  box-sizing: border-box;
  color: #f5f5f5;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #f5f5f5;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span
    className=""
  >
    Settings
  </span>
</button>
`;

exports[`Button  3`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: rgba(128,128,128,0.5);
  border-radius: 2px;
  box-sizing: border-box;
  color: #3c3c3c;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: none;
}

.emotion-0:visited {
  color: #3c3c3c;
}

.emotion-0 svg * {
  fill: #3c3c3c;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span
    className=""
  >
    Settings
  </span>
</button>
`;

exports[`Button  4`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: rgba(255,255,255,0);
  border-radius: 2px;
  box-sizing: border-box;
  color: #006EAF;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: none;
}

.emotion-0:visited {
  color: #006EAF;
}

.emotion-0 svg * {
  fill: #006EAF;
}

<button
  className="emotion-0"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span
    className=""
  >
    Settings
  </span>
</button>
`;

exports[`Button  5`] = `
.emotion-2 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 2px;
  box-sizing: border-box;
  color: #f5f5f5;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-2:visited {
  color: #f5f5f5;
}

.emotion-2 svg * {
  fill: #f5f5f5;
}

.emotion-0 {
  display: inline-block;
  position: absolute;
  height: 24px;
  margin-right: 4px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-1 {
  margin-left: calc(24px + 4px);
}

<button
  className="emotion-2"
  disabled={false}
  href={undefined}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span
    className="emotion-0"
  >
    &lt;Icon /&gt;
  </span>
  <span
    className="emotion-1"
  >
    Settings
  </span>
</button>
`;

exports[`Button  6`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 2px;
  box-sizing: border-box;
  color: #f5f5f5;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #f5f5f5;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<a
  className="emotion-0"
  disabled={false}
  href="https://hig.autodesk.com"
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={undefined}
  onMouseUp={[Function]}
  tabIndex="0"
  target={undefined}
>
  <span
    className=""
  >
    Settings
  </span>
</a>
`;
